add log api
